# QuackSupport

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: anthropic.py  computer.py  main.py  store.py  window.py
